--- a/templates/page/page--landing.html.twig
+++ b/templates/page/page--landing.html.twig
@@ -21,6 +21,8 @@
 		<div class="layout-content">
 			{{ page.content }}
 
+			{{ include('sacda_test:hello-test') }}
+
 		</div>
 
 		{% if page.sidebar_first %}
