FINALLY WORKING LETS GOOOO

--- a/templates/page/page--landing.html.twig
+++ b/templates/page/page--landing.html.twig
@@ -23,6 +23,8 @@
 
 			{{ include('sacda_test:hello-test') }}
 
+			{{ include('sacda_test:shadcn-test') }}
+
 		</div>
 
 		{% if page.sidebar_first %}
