--- a/templates/menus/menu--account.html.twig
+++ b/templates/menus/menu--account.html.twig
@@ -15,7 +15,7 @@
 		</svg>
 	</button>
 
-	<div id="sacda-account-dropdown" class="absolute right-0 mt-2 w-48 rounded-md shadow-lg bg-(--sacda-primary-color) focus:outline-none hidden z-50" style="min-width: 12rem; white-space: nowrap;">
+	<div id="sacda-account-dropdown" class="absolute right-0 mt-2 min-w-48 whitespace-nowrap rounded-md shadow-lg bg-(--sacda-primary-color) focus:outline-none hidden z-50">
 		{{ menus.menu_links(items, attributes, 0) }}
 	</div>
 </div>
@@ -26,7 +26,7 @@
 		<ul class="flex flex-col list-none m-0 p-0">
 			{% for item in items %}
 				<li class="list-none">
-					<a style="color: #000;" href="{{ item.url }}" class="block px-4 py-2 text-sm no-underline transition-colors duration-200" {% if item.in_active_trail %} aria-current="page" {% endif %}>
+					<a href="{{ item.url }}" class="block px-4 py-2 text-sm text-black no-underline transition-colors duration-200" {% if item.in_active_trail %} aria-current="page" {% endif %}>
 						{{ item.title }}
 					</a>
 					{% if item.below %}
