feat: search box in header

--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -29,7 +29,7 @@
 
 						{% if page.sidebar %}
 							<div class="sidebar-grid grid-full">
-								<main role="main" class="site-main">
+								<main role="main" class="site-main pt-10">
 									{{ page.content_above }}
 									{{ page.content }}
 								</main>
