--- a/templates/page/page--landing.html.twig
+++ b/templates/page/page--landing.html.twig
@@ -18,7 +18,7 @@
 		<a id="main-content" tabindex="-1"></a>
 		{# link is in html.html.twig #}
 
-		<div class="layout-content">
+		<div class="layout-content pt-10">
 			{{ page.content }}
 		</div>
 
