feat: names change + other stuff

--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -13,7 +13,7 @@
 		{# =====================================================
 		       CUSTOM HEADER - Replaces Olivero's header
 		 ===================================================== #}
-		{% include '@sacda_test/navigation/header.html.twig' %}
+		{% include '@sacda/navigation/header.html.twig' %}
 
 		{# =====================================================
 		       MAIN CONTENT - Kept from Olivero
@@ -54,7 +54,7 @@
 		{# =====================================================
 		       CUSTOM FOOTER - Replaces Olivero's footer
 		 ===================================================== #}
-		{% include '@sacda_test/navigation/footer.html.twig' %}
+		{% include '@sacda/navigation/footer.html.twig' %}
 
 		<div class="overlay" data-drupal-selector="overlay"></div>
 
