--- a/templates/page/page--landing.html.twig
+++ b/templates/page/page--landing.html.twig
@@ -12,7 +12,7 @@
 #}
 <div class="">
 
-	{% include '@sacda_test/navigation/header.html.twig' %}
+	{% include '@sacda/navigation/header.html.twig' %}
 
 	<main role="main" class="main-content">
 		<a id="main-content" tabindex="-1"></a>
@@ -36,6 +36,6 @@
 
 	</main>
 
-	{% include '@sacda_test/navigation/footer.html.twig' %}
+	{% include '@sacda/navigation/footer.html.twig' %}
 
 </div>
