feat: added fonts

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://use.typekit.net/vns2lps.css");
+@import "./_fonts.css";
 @import "tailwindcss";
 @import "tw-animate-css";
 @import "./_base.css";
@@ -71,7 +72,7 @@
 	--sidebar-ring: oklch(0.748 0.176 65.4);
 
 	--font-family-heading: "brandon-grotesque", sans-serif;
-	--font-family-body: "brandon grotesque", sans-serif;
+	--font-family-body: "Lato", "brandon grotesque", sans-serif;
 }
 
 .dark {
@@ -156,6 +157,10 @@
 	   --gutter-lg: 150px
 	*/
 	--color-sidebar-ring: var(--sidebar-ring);
+
+	/* Font Families */
+	--font-heading: var(--font-family-heading);
+	--font-body: var(--font-family-body);
 }
 
 @theme {
