--- a/templates/page/page--front.html.twig
+++ b/templates/page/page--front.html.twig
@@ -2,24 +2,22 @@
 /**
  * @file
  * SACDA theme front page template.
+ * Extends the base page layout and overrides just the main content.
  */
 #}
-<div class="">
+{% extends '@sacda/layout/page.html.twig' %}
 
-	{% include '@sacda/navigation/header.html.twig' %}
-
-	<main role="main" class="main-content">
+{% block main %}
+	<main role="main" class="front-page">
 		<a id="main-content" tabindex="-1"></a>
-		jf
-		lakjflaskf
-		{# Carousel - configured via theme settings #}
+
 		{% include '@sacda/blocks/sacda-carousel.html.twig' with {
-			slides: carousel_slides,
-			autoplay_speed: carousel_autoplay_speed
-		} %}
+		slides: carousel_slides,
+		autoplay_speed: carousel_autoplay_speed
+	} %}
+
+		{# Add more front page sections here #}
+		{{ page.content }}
 
 	</main>
-
-	{% include '@sacda/navigation/footer.html.twig' %}
-
-</div>
+{% endblock %}
