--- a/templates/page/page--front.html.twig
+++ b/templates/page/page--front.html.twig
@@ -8,19 +8,21 @@
 {% extends '@sacda/layout/page.html.twig' %}
 
 {% block main %}
-	<main role="main" class="front-page w-full pb-[100vh]">
+	<main role="main" class="front-page w-full">
 		<a id="main-content" tabindex="-1"></a>
 
-		{# Full-width carousel #}
-		<div class="w-full">
+		{# Full-viewport carousel with negative margin to go under header #}
+		<div class="w-full -mt-[104px] md:-mt-[128px]">
 			{% include '@sacda/blocks/sacda-carousel.html.twig' with {
 			slides: carousel_slides,
-			autoplay_speed: carousel_autoplay_speed
+			autoplay_speed: carousel_autoplay_speed,
+			slides_per_view: 1,
+			full_height: true
 		} %}
 		</div>
 
 		{# Content with container #}
-		<div class="container mx-auto px-4">
+		<div class="container mx-auto px-4 py-12">
 			{{ page.content }}
 		</div>
 
