--- a/templates/layout/region--content.html.twig
+++ b/templates/layout/region--content.html.twig
@@ -5,7 +5,7 @@
  */
 #}
 {% if content %}
-	<div{{attributes.addClass('region','region-content')}}>
+	<div class="region region-content min-h-[50vh]">
 		{{ content }}
 	</div>
 {% endif %}
